hphp/hack/test/typecheck/truthiness_test_15.php.exp
File "truthiness_test_15.php", line 4, characters 7-8:
Sketchy condition: a value of type Iterable<int> may be truthy even when empty.
Hack collections and arrays are falsy when empty, but user-defined Traversables will always be truthy, even when empty.
If you would like to only allow containers which are falsy when empty, use the Container or KeyedContainer interfaces. (Typing[4276])
