hphp/hack/test/typecheck/truthiness_test_15.php
<?hh // strict

function test(Iterable<int> $x): void {
  if ($x) {
  }
}
